--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<!-- $Id: index.html,v 1.9 2005/01/31 19:57:15 jact Exp $ -->
+<!-- $Id: index.html,v 1.10 2005/02/19 12:53:44 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <title>OpenClinic Readme</title>
@@ -26,61 +26,18 @@
 <link rel="bookmark icon" type="image/png" href="./images/miniopc.png" />
 </head>
 <body id="top">
-<!-- OpenClinic logo and black background -->
-<div id="header"><span class="headerLHS"><a href="http://openclinic.sourceforge.net"><img src="./images/openclinic-1.png" width="291" height="58" alt="OpenClinic site" title="OpenClinic site" /></a></span><!-- End .headerLHS --><a href="http://sourceforge.net" title="SourceForge.net Logo"><img src="./images/sf-logo2.png" width="210" height="58" alt="SourceForge.net Logo" /></a></div><!-- End #header -->
-
-<div class="links">
-  <ul class="linkList">
-    <li><a href="./install.html">Install Instructions</a></li>
-
-    <li><a href="./changelog.html">OpenClinic Changelog</a></li>
-
-    <li class="bold"><a href="./index.php">Start OpenClinic</a></li>
-
-    <li><a href="./coding_guidelines.html">OpenClinic Coding Guidelines</a></li>
-
-    <li><a href="./demo_version.html">Demo Version Features</a></li>
-  </ul>
-</div><!-- End .links -->
-
 <div id="content">
-  <h1><a href="./index.php">Start using OpenClinic</a></h1>
-
-  <!--h2><a href="./demo_version.html">View demo version features</a> | <a href="./index.php">Start using OpenClinic demo version</a></h2-->
-
-  <hr />
-
   <h1>OpenClinic Readme</h1>
 
   <p>Welcome to OpenClinic!</p>
+
+  <!--h2><a href="./demo_version.html">View demo version features</a> | <a href="./index.php">Start using OpenClinic demo version</a></h2-->
 
   <p>First of all, thanks a lot to download this software, I hope that you can enjoy it.</p>
 
   <p>
     OpenClinic is free software, released under GNU GPL Licence version 2.0 (see <a href="./LICENSE">LICENSE</a> file for details).
   </p>
-
-  <hr />
-
-  <h2>Table of contents</h2>
-
-  <div class="links">
-    <ul class="linkList">
-      <li><a href="#intro">Introduction</a></li>
-
-      <li><a href="#require">Requirements</a></li>
-
-      <li><a href="#feature">Features</a></li>
-
-      <li><a href="#language">Multilingual Support</a></li>
-
-      <li><a href="#down">Download</a></li>
-
-      <li><a href="#devel">Developers Information</a></li>
-
-      <li><a href="#bye">Farewell</a></li>
-    </ul>
-  </div><!-- End .links -->
 
   <hr />
 
@@ -259,30 +216,60 @@
   </p>
 </div><!-- End #content -->
 
-<div class="links">
+<div id="left">
+  <p>
+    <a href="http://openclinic.sourceforge.net" id="logo" title="OpenClinic web site">OpenClinic web site</a>
+  </p>
+
+  <h2>Table of contents</h2>
+
   <ul class="linkList">
-    <li><a href="./install.html">Install Instructions</a></li>
+    <li><a href="#intro">Introduction</a></li>
 
-    <li><a href="./changelog.html">OpenClinic Changelog</a></li>
+    <li><a href="#require">Requirements</a></li>
 
+    <li><a href="#feature">Features</a></li>
+
+    <li><a href="#language">Multilingual Support</a></li>
+
+    <li><a href="#down">Download</a></li>
+
+    <li><a href="#devel">Developers Information</a></li>
+
+    <li><a href="#bye">Farewell</a></li>
+  </ul>
+</div><!-- End #left -->
+
+<div id="right">
+  <h2>Related links</h2>
+
+  <ul class="linkList">
     <li class="bold"><a href="./index.php">Start OpenClinic</a></li>
 
-    <li><a href="./coding_guidelines.html">OpenClinic Coding Guidelines</a></li>
+    <li><a href="./install.html">Install Instructions</a></li>
+
+    <li><a href="./changelog.html">Changelog</a></li>
+
+    <li><a href="./coding_guidelines.html">Coding Guidelines</a></li>
 
     <li><a href="./demo_version.html">Demo Version Features</a></li>
   </ul>
-</div><!-- End .links -->
+
+  <p>
+    <a href="http://sourceforge.net" id="hosting" title="Project hosted in SourceForge.net">Project hosted in SF.net</a>
+  </p>
+</div><!-- End #right -->
 
 <div id="footer">
-  Powered by OpenClinic
-  <br />
-  Copyright &copy; 2002-2005 <a href="mailto:CUT-THIS.jachavar&#64;terra.es" accesskey="9">Jose Antonio Chavarría</a>
-  <br />
-  under the <a href="./LICENSE">GNU General Public License</a>
-</div><!-- End #footer -->
+  <p>Powered by OpenClinic</p>
 
-<div class="logos">
-  <a href="http://validator.w3.org/check/referer"><img src="./images/valid-xhtml11.png" alt="Valid XHTML 1.1" title="Valid XHTML 1.1" width="80" height="15" /></a>
-</div><!-- End .logos -->
+  <p>Copyright &copy; 2002-2005 <a href="mailto:CUT-THIS.jachavar&#64;terra.es" accesskey="9">Jose Antonio Chavarría</a></p>
+
+  <p>under the <a href="./LICENSE">GNU General Public License</a></p>
+
+  <p>
+    <a href="http://validator.w3.org/check/referer" id="xhtml11" title="Valid XHTML 1.1">Valid XHTML 1.1</a>
+  </p>
+</div><!-- End #footer -->
 </body>
 </html>
