--- a/changelog.html
+++ b/changelog.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<!-- $Id: changelog.html,v 1.14 2005/02/19 12:53:43 jact Exp $ -->
+<!-- $Id: changelog.html,v 1.15 2005/03/04 19:56:16 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <title>OpenClinic Changelog</title>
@@ -19,7 +19,9 @@
 
 <meta name="description" content="OpenClinic is an easy to use, open source, medical records system written in PHP" />
 
-<link rel="stylesheet" type="text/css" href="./css/style.css" title="OpenClinic" />
+<link rel="stylesheet" type="text/css" href="./css/style.css" media="screen" title="OpenClinic" />
+
+<link rel="stylesheet" type="text/css" href="./css/print.css" media="print" />
 
 <link rel="shortcut icon" type="image/png" href="./images/miniopc.png" />
 
