--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<!-- $Id: index.html,v 1.10 2005/02/19 12:53:44 jact Exp $ -->
+<!-- $Id: index.html,v 1.11 2005/03/04 19:56:26 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <title>OpenClinic Readme</title>
@@ -19,7 +19,9 @@
 
 <meta name="description" content="OpenClinic is an easy to use, open source, medical records system written in PHP" />
 
-<link rel="stylesheet" type="text/css" href="./css/style.css" title="OpenClinic" />
+<link rel="stylesheet" type="text/css" href="./css/style.css" media="screen" title="OpenClinic" />
+
+<link rel="stylesheet" type="text/css" href="./css/print.css" media="print" />
 
 <link rel="shortcut icon" type="image/png" href="./images/miniopc.png" />
 
