--- a/demo_version.html
+++ b/demo_version.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<!-- $Id: demo_version.html,v 1.8 2005/02/19 12:53:44 jact Exp $ -->
+<!-- $Id: demo_version.html,v 1.9 2005/03/04 19:56:56 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <title>Demo Version Features</title>
@@ -19,7 +19,9 @@
 
 <meta name="description" content="OpenClinic is an easy to use, open source, medical records system written in PHP" />
 
-<link rel="stylesheet" type="text/css" href="./css/style.css" title="OpenClinic" />
+<link rel="stylesheet" type="text/css" href="./css/style.css" media="screen" title="OpenClinic" />
+
+<link rel="stylesheet" type="text/css" href="./css/print.css" media="print" />
 
 <link rel="shortcut icon" type="image/png" href="./images/miniopc.png" />
 
@@ -32,13 +34,13 @@
   <h2 id="enable"><a href="#top" title="To top of the page">Enable/Disable Demo</a></h2>
 
   <p>
-    To enable/disable OpenClinic demo behavior there must be set as <tt>true</tt> or <tt>false</tt> the constant <tt>OPEN_DEMO</tt> in file <tt class="note">shared/read_settings.php</tt>.
+    To enable/disable OpenClinic demo behavior there must be set as <code>true</code> or <code>false</code> the constant <code>OPEN_DEMO</code> in file <code class="note">shared/read_settings.php</code>.
   </p>
 
 <pre class="programlisting">
-define("OPEN_DEMO", <span class="note">false</span>); // normal version
+define("OPEN_DEMO", <var class="note">false</var>); // normal version
 
-define("OPEN_DEMO", <span class="note">true</span>); // demo version
+define("OPEN_DEMO", <var class="note">true</var>); // demo version
 </pre>
 
   <hr />
