--- a/demo_version.html
+++ b/demo_version.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<!-- $Id: demo_version.html,v 1.9 2005/03/04 19:56:56 jact Exp $ -->
+<!-- $Id: demo_version.html,v 1.10 2005/05/29 16:29:51 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <title>Demo Version Features</title>
@@ -52,21 +52,21 @@ define("OPEN_DEMO", <var class="note">true</var>); // demo version
   </p>
 
   <ul>
-    <li><span class="note">Admin &raquo; Dumps</span> - This option is used to back-up the application database in different formats.</li>
+    <li><strong class="note">Admin &raquo; Dumps</strong> - This option is used to back-up the application database in different formats.</li>
 
-    <li><span class="note">Install script page</span> - This page is needed to install the application and to restore the back-ups of the database. As into this site everything is set up to start using the application, it is unnecesary its use.</li>
+    <li><strong class="note">Install script page</strong> - This page is needed to install the application and to restore the back-ups of the database. As into this site everything is set up to start using the application, it is unnecesary its use.</li>
 
-    <li>In the option <span class="note">Admin &raquo; Config Settings</span> you can choose the application language. But in this demo version it is disabled for clearness reasons.</li>
+    <li>In the option <strong class="note">Admin &raquo; Config Settings</strong> you can choose the application language. But in this demo version it is disabled for clearness reasons.</li>
 
     <li>Disabling security for demo since sourceforge.net seems to be using mirrored servers that do not share session info. That is why, in demo version there isn't user's control.</li>
 
     <li>Historical and log tables would not be used for lack of space reasons.</li>
 
-    <li><span class="note">Admin &raquo; Logs Statistics</span> - Log tables would not be used.</li>
+    <li><strong class="note">Admin &raquo; Logs Statistics</strong> - Log tables would not be used.</li>
 
-    <li>In <span class="note">Medical Records</span> tab doesn't exist a list of lastest viewed patients.</li>
+    <li>In <strong class="note">Medical Records</strong> tab doesn't exist a list of lastest viewed patients.</li>
 
-    <li>In <span class="note">Medical Records</span> tab can't manage <span class="note">medical problem tests</span> because server's space disk is limited.</li>
+    <li>In <strong class="note">Medical Records</strong> tab can't manage <strong class="note">medical problem tests</strong> because server's space disk is limited.</li>
 
     <li>Patients and medical problems can't be deleted.</li>
   </ul>
@@ -80,11 +80,11 @@ define("OPEN_DEMO", <var class="note">true</var>); // demo version
   </p>
 
   <ul>
-    <li><span class="note">Administrator</span> - Users with this profile would have total access available into the program.</li>
+    <li><strong class="note">Administrator</strong> - Users with this profile would have total access available into the program.</li>
 
-    <li><span class="note">Administrative</span> - Users with this profile would have access to <span class="note">Medical Records</span> tab and <span class="note">Home</span> tab only.</li>
+    <li><strong class="note">Administrative</strong> - Users with this profile would have access to <strong class="note">Medical Records</strong> tab and <strong class="note">Home</strong> tab only.</li>
 
-    <li><span class="note">Doctor</span> - This profile, at this application developing stage, has only access to the <span class="note">Home</span> tab and some of the options of <span class="note">Medical Records</span> tab. It only can see patient's data, not edit them.</li>
+    <li><strong class="note">Doctor</strong> - This profile, at this application developing stage, has only access to the <strong class="note">Home</strong> tab and some of the options of <strong class="note">Medical Records</strong> tab. It only can see patient's data, not edit them.</li>
   </ul>
 
   <hr />
@@ -92,7 +92,7 @@ define("OPEN_DEMO", <var class="note">true</var>); // demo version
   <h2 id="private"><a href="#top" title="To top of the page">Patient Private Data</a></h2>
 
   <p>
-    Patient's data should be ficticious. This is so because they should be used only for <span class="note">Medical Records</span> tab aplication testing purposes. Therefore, as author's site, I don't take charge of any liability derived from the data that this application could hold.
+    Patient's data should be ficticious. This is so because they should be used only for <strong class="note">Medical Records</strong> tab aplication testing purposes. Therefore, as author's site, I don't take charge of any liability derived from the data that this application could hold.
   </p>
 
   <hr />
@@ -100,7 +100,7 @@ define("OPEN_DEMO", <var class="note">true</var>); // demo version
   <h2 id="bugs"><a href="#top" title="To top of the page">Bugs and Suggestions</a></h2>
 
   <p>
-    OpenClinic isn't perfect, but your suggestions, feedback and bug reports can help us to have a very well done medical records system! You can do this, mailing to <a href="mailto:CUT-THIS.jachavar&#64;terra.es">Jose Antonio Chavarría</a> with <span class="note">subject OpenClinic</span>.
+    OpenClinic isn't perfect, but your suggestions, feedback and bug reports can help us to have a very well done medical records system! You can do this, mailing to <a href="mailto:CUT-THIS.jachavar&#64;gmail.com?subject=OpenClinic">Jose Antonio Chavarría</a> with <strong class="note">subject OpenClinic</strong>.
   </p>
 
   <hr />
@@ -151,7 +151,7 @@ define("OPEN_DEMO", <var class="note">true</var>); // demo version
 <div id="footer">
   <p>Powered by OpenClinic</p>
 
-  <p>Copyright &copy; 2002-2005 <a href="mailto:CUT-THIS.jachavar&#64;terra.es" accesskey="9">Jose Antonio Chavarría</a></p>
+  <p>Copyright &copy; 2002-2005 <a href="mailto:CUT-THIS.jachavar&#64;gmail.com?subject=OpenClinic" accesskey="9">Jose Antonio Chavarría</a></p>
 
   <p>under the <a href="./LICENSE">GNU General Public License</a></p>
 
