--- a/coding_guidelines.html
+++ b/coding_guidelines.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<!-- $Id: coding_guidelines.html,v 1.11 2005/03/05 18:45:32 jact Exp $ -->
+<!-- $Id: coding_guidelines.html,v 1.12 2005/05/29 16:29:51 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <title>OpenClinic Coding Guidelines</title>
@@ -638,7 +638,7 @@ collegiate_number, first_name, phone_contact, login
 <div id="footer">
   <p>Powered by OpenClinic</p>
 
-  <p>Copyright &copy; 2002-2005 <a href="mailto:CUT-THIS.jachavar&#64;terra.es" accesskey="9">Jose Antonio Chavarría</a></p>
+  <p>Copyright &copy; 2002-2005 <a href="mailto:CUT-THIS.jachavar&#64;gmail.com?subject=OpenClinic" accesskey="9">Jose Antonio Chavarría</a></p>
 
   <p>under the <a href="./LICENSE">GNU General Public License</a></p>
 
