--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<!-- $Id: index.html,v 1.11 2005/03/04 19:56:26 jact Exp $ -->
+<!-- $Id: index.html,v 1.12 2005/05/29 16:29:51 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <title>OpenClinic Readme</title>
@@ -95,7 +95,7 @@
 
   <ul>
     <li>
-      PHP4 &gt;= 4.2 (due to session variable changes in PHP 4.2) <span class="note">compiled with MySQL support</span> (tested with versions 4.2.* and 4.3.*);
+      PHP4 &gt;= 4.2 (due to session variable changes in PHP 4.2) <strong class="note">compiled with MySQL support</strong> (tested with versions 4.2.* and 4.3.*);
     </li>
 
     <li>
@@ -103,7 +103,7 @@
     </li>
 
     <li>
-      a web server prepared to execute PHP code (recommended <a href="http://httpd.apache.org/">Apache</a>);
+      a web server prepared to execute <acronym title="PHP: Hypertext Preprocessor">PHP</acronym> code (recommended <a href="http://httpd.apache.org/">Apache</a>);
     </li>
 
     <li>
@@ -156,7 +156,7 @@
   <h2 id="devel"><a href="#top" title="To top of the page">Developers Information</a></h2>
 
   <p>
-    [jact] - Jose Antonio Chavarría &lt;<a href="mailto:CUT-THIS.jachavar&#64;terra.es">jachavar at terra dot es</a>&gt;
+    [jact] - Jose Antonio Chavarría &lt;<a href="mailto:CUT-THIS.jachavar&#64;gmail.com">jachavar at gmail dot com</a>&gt;
   </p>
 
   <ul>
@@ -265,7 +265,7 @@
 <div id="footer">
   <p>Powered by OpenClinic</p>
 
-  <p>Copyright &copy; 2002-2005 <a href="mailto:CUT-THIS.jachavar&#64;terra.es" accesskey="9">Jose Antonio Chavarría</a></p>
+  <p>Copyright &copy; 2002-2005 <a href="mailto:CUT-THIS.jachavar&#64;gmail.com?subject=OpenClinic" accesskey="9">Jose Antonio Chavarría</a></p>
 
   <p>under the <a href="./LICENSE">GNU General Public License</a></p>
 
