--- a/install.html
+++ b/install.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<!-- $Id: install.html,v 1.9 2005/03/04 19:57:21 jact Exp $ -->
+<!-- $Id: install.html,v 1.10 2005/05/29 16:29:51 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <title>OpenClinic Install Instructions</title>
@@ -43,7 +43,7 @@
     </li>
 
     <li>
-      In the section <span class="note">Install a SQL File</span>, choose the right file in <code>install/upgrades/</code> directory.
+      In the section <strong class="note">Install a SQL File</strong>, choose the right file in <code>install/upgrades/</code> directory.
     </li>
 
     <li>
@@ -57,12 +57,12 @@
 
   <ol>
     <li>
-      Install a web server such as <a href="http://httpd.apache.org">Apache</a> that can execute cgi applications. If you install Apache, get familiar with starting and stopping your Apache Web Server. If you are running Windows 95 or Windows 98 there will be "Start Apache" and "Stop Apache" icons that will help you start and stop your web server. You may want to consider adding the "Start Apache" icon to your startup folder. If you are running NT you can add Apache as a service which will be running, even if you are logged off. If you are running Linux your Apache server should be packaged with your Linux installation and will start when you start Linux.
+      Install a web server such as <a href="http://httpd.apache.org">Apache</a> that can execute cgi applications. If you install Apache, get familiar with starting and stopping your Apache Web Server. If you are running Windows 95 or Windows 98 there will be <q><strong>Start Apache</strong></q> and <q><strong>Stop Apache</strong></q> icons that will help you start and stop your web server. You may want to consider adding the <q><strong>Start Apache</strong></q> icon to your startup folder. If you are running NT you can add Apache as a service which will be running, even if you are logged off. If you are running Linux your Apache server should be packaged with your Linux installation and will start when you start Linux.
     </li>
 
     <li>
       <p>
-        Install the MySQL database from <a href="http://www.mysql.com">MySQL web site</a>. Get familiar with starting and stopping your MySQL Server. See <a href="http://www.mysql.com/doc/W/i/Win95_start.html">Starting MySQL on Windows 95 or Windows 98</a> for more information. <span class="note">Version recommended: &gt;= 3.23.36.</span>
+        Install the MySQL database from <a href="http://www.mysql.com">MySQL web site</a>. Get familiar with starting and stopping your MySQL Server. See <a href="http://www.mysql.com/doc/W/i/Win95_start.html">Starting MySQL on Windows 95 or Windows 98</a> for more information. <strong class="note">Version recommended: &gt;= 3.23.36.</strong>
       </p>
 
       <p>
@@ -77,7 +77,7 @@
     <li>
       Get familiar with logging into MySQL with your admin account within a DOS prompt window. You can use the following command sequence as a test.
 
-<blockquote><pre>
+<pre>
 C:\&gt;<kbd>c:\mysql\bin\mysql -uadmin -p mysql</kbd>
 Enter password: <kbd>*********</kbd>
 Welcome to the MySQL monitor.  Commands end with ; or \g.
@@ -86,25 +86,25 @@ Your MySQL connection id is 1 to server version: 3.23.52-max-debug
 Type 'help;' or '\h' for help. Type '\c' to clear the buffer
 
 mysql&gt; <kbd>show databases;</kbd>
-+--------------+
+<samp>+--------------+
 | Database     |
 +--------------+
 | mysql        |
 | test         |
 +--------------+
 2 rows in set (0.00 sec)
-
+</samp>
 mysql&gt; <kbd>exit</kbd>
-Bye
-
+<samp>Bye
+</samp>
 C:\&gt;
-</pre></blockquote>
+</pre>
     </li>
 
     <li id="step4">
       Create an openclinic database. To do this, log into MySQL with your admin account and run the following SQL command.
 
-<blockquote><pre>
+<pre>
 mysql&gt; <kbd>create database openclinic;</kbd>
 </pre>
 
@@ -113,32 +113,32 @@ mysql&gt; <kbd>create database openclinic;</kbd>
       </p>
 <pre>
 mysql&gt; <kbd>show databases;</kbd>
-+--------------+
+<samp>+--------------+
 | Database     |
 +--------------+
 | mysql        |
 | openclinic   |
 | test         |
 +--------------+
-3 rows in set (0.00 sec)
-</pre></blockquote>
+3 rows in set (0.00 sec)</samp>
+</pre>
     </li>
 
     <li id="step5">
       Create an openclinic database user. To do this login to MySQL under the admin userid and run the following SQL command, substituting <var>openclinic_user</var> and <var>openclinic_password</var> with the userid and password of your choice.
 
-<blockquote><pre>
+<pre>
 mysql&gt; <kbd>grant all privileges on openclinic.* to <var>openclinic_user</var>@localhost</kbd>
     -&gt; <kbd>identified by '<var>openclinic_password</var>' with grant option;</kbd>
-</pre></blockquote>
+</pre>
     </li>
 
     <li>
       Verify your openclinic database and user by logging into the new MySQL database under the new user.
 
-<blockquote><pre>
+<pre>
 C:\&gt;<kbd>C:\mysql\bin\mysql -u <var>openclinic_user</var> -p<var>openclinic_password</var> openclinic</kbd>
-</pre></blockquote>
+</pre>
     </li>
 
     <li id="step7">
@@ -158,7 +158,7 @@ C:\&gt;<kbd>C:\mysql\bin\mysql -u <var>openclinic_user</var> -p<var>openclinic_p
     </li>
 
     <li>
-      Access your new <a href="./index.php">clinic system</a>. Enter <kbd class="note">admin</kbd> for both, the login and password whenever you are prompted to sign on. You can change the admin password from the <span class="note">Admin &raquo; Users</span>.
+      Access your new <a href="./index.php">clinic system</a>. Enter <kbd class="note">admin</kbd> for both, the login and password whenever you are prompted to sign on. You can change the admin password from the <strong class="note">Admin &raquo; Users</strong>.
     </li>
   </ol>
 </div><!-- End #content -->
@@ -200,7 +200,7 @@ C:\&gt;<kbd>C:\mysql\bin\mysql -u <var>openclinic_user</var> -p<var>openclinic_p
 <div id="footer">
   <p>Powered by OpenClinic</p>
 
-  <p>Copyright &copy; 2002-2005 <a href="mailto:CUT-THIS.jachavar&#64;terra.es" accesskey="9">Jose Antonio Chavarría</a></p>
+  <p>Copyright &copy; 2002-2005 <a href="mailto:CUT-THIS.jachavar&#64;gmail.com?subject=OpenClinic" accesskey="9">Jose Antonio Chavarría</a></p>
 
   <p>under the <a href="./LICENSE">GNU General Public License</a></p>
 
