Cambios en las cabeceras de ejemplo

--- a/coding_guidelines.html
+++ b/coding_guidelines.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<!-- $Id: coding_guidelines.html,v 1.13 2005/06/26 16:44:15 jact Exp $ -->
+<!-- $Id: coding_guidelines.html,v 1.14 2005/08/03 18:03:45 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
@@ -288,11 +288,11 @@ function fooFunction($arg1, $arg2 = '')
 <pre class="programlisting">
 /**
  * file_name.php - Short description content (optional)
- ********************************************************************
+ *
  * Long description (more detailed)
- ********************************************************************
+ *
  * Author: Name &lt;e-mail address&gt; (optional)
- * Last modified: Date/Time
+ * Last modified: Date/Time ($Id: coding_guidelines.html,v 1.14 2005/08/03 18:03:45 jact Exp $ better)
  */
 </pre>
 
@@ -327,9 +327,9 @@ function fooFunction($arg1, $arg2 = '')
 <pre class="programlisting">
 /**
  * Module name
- ********************************************************************
+ *
  * Long description (more detailed)
- ********************************************************************
+ *
  * Functions:
  *  int fileOpen(string $fileName)
  *  bool fileClose(int $fileHandle)
@@ -364,9 +364,9 @@ function fooFunction($arg1, $arg2 = '')
 <pre class="programlisting">
 /**
  * Function prototype
- ********************************************************************
+ *
  * Long description
- ********************************************************************
+ *
  * Parameters:
  *  $name - description
  *
@@ -390,9 +390,9 @@ function fooFunction($arg1, $arg2 = '')
  * void showInputText(string $fieldName, string $size, string $max,
  * array &amp;$postVars, array &amp;$pageErrors, string $type = "text",
  * bool $readOnly = false)
- ********************************************************************
+ *
  * Draws input html tag of type text or password.
- ********************************************************************
+ *
  * @param string $fieldName name of input field
  * @param string $size size of text box
  * @param string $max max input length of text box
