--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
-<!-- $Id: index.html,v 1.13 2005/06/26 16:44:15 jact Exp $ -->
+<!-- $Id: index.html,v 1.14 2006/08/17 17:43:57 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
@@ -13,7 +13,7 @@
 
 <meta name="author" content="Jose Antonio Chavarría" />
 
-<meta name="copyright" content="2002-2005 Jose Antonio Chavarría" />
+<meta name="copyright" content="2002-2006 Jose Antonio Chavarría" />
 
 <meta name="keywords" content="OpenClinic, open source, gpl, healthcare, php, mysql, coresis" />
 
@@ -95,7 +95,7 @@
 
   <ul>
     <li>
-      PHP4 &gt;= 4.2 (due to session variable changes in PHP 4.2) <strong class="note">compiled with MySQL support</strong> (tested with versions 4.2.* and 4.3.*);
+      PHP4 &gt;= 4.3.0 (due to use of mysql_real_escape_string function) <strong class="note">compiled with MySQL support</strong> (tested with versions 4.3.*, 4.4.*);
     </li>
 
     <li>
@@ -265,7 +265,7 @@
 <div id="footer">
   <p>Powered by OpenClinic</p>
 
-  <p>Copyright &copy; 2002-2005 <a href="mailto:CUT-THIS.jachavar&#64;gmail.com?subject=OpenClinic" accesskey="9">Jose Antonio Chavarría</a></p>
+  <p>Copyright &copy; 2002-2006 <a href="mailto:CUT-THIS.jachavar&#64;gmail.com?subject=OpenClinic" accesskey="9">Jose Antonio Chavarría</a></p>
 
   <p>under the <a href="./LICENSE">GNU General Public License</a></p>
 
